--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "helmet": "^3.22.0",
     "http-status-codes": "^1.4.0",
     "module-alias": "^2.2.2",
+    "mongodb": "^3.5.6",
     "morgan": "^1.10.0",
     "winston": "^3.2.1"
   },
