:heavy_plus_sign: Installing new packages
 - dotenv to user env controls
 - mongoose (ODM) to work with mongodb

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
+# General Ignore Files
 node_modules/
 .DS_Store
+
+# Ignoring lock files
 package-lock.json
 yarn.lock
+
+# Skipping build files
 dist/
+
+# Ignoring Logs
+logs/
+
+# Env
+.env
