--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^3.22.0",
     "http-status-codes": "^1.4.0",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
