--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/bluebird": "^3.5.30",
+    "@types/jsonwebtoken": "^8.3.9",
     "@types/mongoose": "^5.7.14",
     "bluebird": "^3.7.2",
     "command-line-args": "^5.1.1",
