--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lint": "tslint --project \"tsconfig.json\"",
     "start": "node -r module-alias/register ./dist",
     "start:dev": "nodemon --config nodemon.json",
-    "test": "nodemon --config nodemon.test.json"
+    "test": "nodemon --config nodemon.test.json",
+    "server": "pm2 restart ./dist"
   },
   "_moduleAliases": {
     "@daos": "dist/daos",
