--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@daos": "dist/daos",
     "@entities": "dist/entities",
     "@shared": "dist/shared",
-    "@server": "dist/Server"
+    "@server": "dist/Server",
+    "@controllers": "dist/controllers",
+    "@middlewares": "dist/middlewares"
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
