--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@entities": "dist/entities",
     "@shared": "dist/shared",
     "@server": "dist/Server",
-    "@controllers": "dist/controllers",
-    "@middlewares": "dist/middlewares"
+    "@controllers": "dist/controllers"
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
