--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@entities": "dist/entities",
     "@shared": "dist/shared",
     "@server": "dist/Server",
-    "@controllers": "dist/controllers"
+    "@controllers": "dist/controllers",
+    "@models": "dist/models"
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
