--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       "@shared/*": ["src/shared/*"],
       "@server": ["src/Server"],
       "@types/*": ["src/types"],
-      "@controllers/*": ["src/controllers"]
+      "@controllers/*": ["src/controllers"],
+      "@models/*": ["src/models/*"]
     },
     "types": ["node"],
     "typeRoots": ["node_modules/@types", "src/types"]
