--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.6",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/mongoose": "^5.7.14",
+    "@types/multer": "^1.4.3",
     "bcrypt": "^4.0.1",
     "bluebird": "^3.7.2",
     "command-line-args": "^5.1.1",
@@ -37,6 +38,7 @@
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
