--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@models": "dist/models"
   },
   "dependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.30",
     "@types/cors": "^2.8.6",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/mongoose": "^5.7.14",
     "@types/multer": "^1.4.3",
+    "aws-sdk": "^2.670.0",
     "bcrypt": "^4.0.1",
     "bluebird": "^3.7.2",
     "command-line-args": "^5.1.1",
