--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^8.3.9",
     "@types/mongoose": "^5.7.14",
     "@types/multer": "^1.4.3",
+    "@types/uuid": "^7.0.3",
     "aws-sdk": "^2.670.0",
     "bcrypt": "^4.0.1",
     "bluebird": "^3.7.2",
@@ -41,6 +42,7 @@
     "mongoose": "^5.9.10",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "uuid": "^8.0.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
